--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <div class="service-box">
                         <i class="fa fa-5x fa-heart text-primary sr-icons"></i>
                         <h3>Social</h3>
-                        <p class="text-muted" align="center">Participación voluntaria para cualquier estudiante en fundaciones como un par por un sueño y la otra.</p>
+                        <p class="text-muted" align="center">Participación voluntaria para cualquier estudiante en fundaciones como un par por un sueño.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
