--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Plancha Tú</title>
-
+    <link rel="shortcut icon" href="img/JeffPlancha.png" />
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
