--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Plancha Tú</title>
-    <link rel="shortcut icon" href="img/JeffPlancha.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/bigimg.ico">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
