--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>
-                        Henrique Arevalo <a href="whatsapp://text?number=+584143115161">+58 414-311-5161</a>
+                        Henrique Arevalo <a href="whatsapp://text?number=4143115161">+58 414-311-5161</a>
                     </p>
                 </div>
                 <div class="col-lg-4 text-center">
