--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>
                         Henrique Arevalo <a href="whatsapp://text?number=4143115161">+58 414-311-5161</a>
-                        <a href="intent://send/4143115161#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"></a
+                        <a href="intent://send/4143115161#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end">Test Link</a>
                     </p>
                 </div>
                 <div class="col-lg-4 text-center">
