--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Plancha Tú</title>
+    <link rel="icon" href="img/JeffPlancha copy.png">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
