more freaking text changes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Plancha Tú</h1>
                 <hr id = "hr"/>
-                <h2 id="slogan">Porque el futuro eres tú</h2>
+                <h2 id="slogan">Porque lo importante eres tú</h2>
                 <div class="form-group col-xs-12">
                     <input class="form-control input-lg" id= "propuesta-input" type="text"  value="">
                 </div>
